# ai_assistant_back

./: .env.example  .gitignore  README.md  ai_assistant.code-workspace  api.md  api_documentation.md  config.py  database.py  init_database.sql  main.py  models.py  pyproject.toml  requirements.txt  run.py  utils.py
routers/: ai.py  auth.py  chat.py  chatwithdeepseek.py  user.py
