[project]
name = "ai-assistant-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.95.0",
    "langchain-core>=0.3.54",
    "langchain-deepseek>=0.1.3",
    "langchain-openai>=0.3.9",
    "openai>=1.75.0",
    "passlib>=1.7.4",
    "pydantic>=1.10.7",
    "pyjwt>=2.6.0",
    "pymysql>=1.0.3",
    "python-dotenv>=1.0.0",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.6",
    "requests>=2.28.2",
    "sqlalchemy>=2.0.9",
    "tenacity>=9.1.2",
    "tiktoken>=0.9.0",
    "uvicorn>=0.21.1",
]
